pong game added

--- a/docker/frontend/index.html
+++ b/docker/frontend/index.html
@@ -3,21 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello World</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 20%;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    h1 {
-      font-size: 2.5rem;
-    }
-  </style>
+  <title>SPA with Pong Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello World</h1>
+  <nav>
+    <a href="#home" data-link>Home</a>
+    <a href="#game" data-link>Play Game</a>
+    <a href="#profile" data-link>Profile</a>
+    <a href="#contact" data-link>Contact</a>
+  </nav>
+  <div id="main-content"></div>
+  <script src="app.js"></script>
 </body>
 </html>
