--- a/docker/frontend/index.html
+++ b/docker/frontend/index.html
@@ -12,6 +12,7 @@
     <a href="#game" data-link>Play Game</a>
     <a href="#profile" data-link>Profile</a>
     <a href="#contact" data-link>Contact</a>
+    <a href="#login" data-link>Login</a>
   </nav>
   <div id="main-content"></div>
   <script src="app.js"></script>
